--- a/app/src/main/res/layout/activity_capture.xml
+++ b/app/src/main/res/layout/activity_capture.xml
@@ -27,7 +27,7 @@
         android:layout_width="9dp"
         android:layout_height="18dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="29dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/back" />
 
     <com.journeyapps.barcodescanner.DecoratedBarcodeView
