--- a/app/src/main/res/layout/activity_list_device.xml
+++ b/app/src/main/res/layout/activity_list_device.xml
@@ -10,14 +10,14 @@
         android:layout_height="0dp"
         android:background="@color/r105"
         android:orientation="horizontal"
-        android:layout_weight="50">
+        android:layout_weight="38">
 
         <ImageButton
             android:id="@+id/btback"
             android:layout_width="9dp"
             android:layout_height="18dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="29dp"
+            android:layout_marginTop="21dp"
             android:background="@drawable/back" />
 
         <ImageView
@@ -28,35 +28,27 @@
             android:scaleType="fitEnd"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="4dp"
             android:layout_height="match_parent"/>
-        <ImageButton
-            android:id="@+id/btSetting"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:scaleType="fitCenter"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_height="match_parent"/>
+
     </LinearLayout>
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="250"
+        android:layout_weight="300"
         android:layout_marginTop="10dp"/>
 
     <Button
         android:id="@+id/btcancel"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="36"
+        android:layout_weight="32"
         android:textSize="12sp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="50dp"
         android:textColor="@color/white"
-        android:background="@color/r105"
+        android:background="@drawable/bt"
         android:text="Cancel" />
 </LinearLayout>
