--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -23,12 +23,6 @@
 
         android:background="@drawable/back" />
 
-    <ImageView
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:layout_marginLeft="195dp"
-        android:layout_marginTop="29dp"
-        android:background="@drawable/signal" />
 
     <ImageView
         android:layout_width="112dp"
@@ -44,7 +38,7 @@
         android:layout_height="18dp"
         android:layout_marginLeft="195dp"
         android:layout_marginTop="29dp"
-        android:src="@drawable/signal" />
+        android:src="@drawable/ble" />
 
 
     <ImageView
